--- a/src/DrumPad.css
+++ b/src/DrumPad.css
@@ -1,5 +1,7 @@
 .drum-pad {
   margin: .25em;
+  min-height: 2.5em;
+  min-width: 2.5em;
   max-width: 96px;
   background-color: rgb(177, 177, 177);
   text-align: center;
