--- a/src/DrumPad.css
+++ b/src/DrumPad.css
@@ -1,9 +1,11 @@
 .drum-pad {
-  margin: .25em;
-  min-height: 2.5em;
-  min-width: 2.5em;
-  max-width: 96px;
-  background-color: rgb(177, 177, 177);
+  margin: .75em;
+  min-height: 80px; /* edit for responsiveness */
+  min-width: 80px;  /* edit for responsiveness */
+  max-width: 96px;  /* edit for responsiveness */
+  background-color: rgb(221, 221, 221);
+  border-radius: 4px;
+  filter: drop-shadow(2px 2px 2px rgb(46, 46, 46));
   text-align: center;
   display: inline-block;
 }
