--- a/src/DrumPad.css
+++ b/src/DrumPad.css
@@ -1,10 +1,15 @@
+/* variables */
+:root {
+  --pad-color: rgb(221, 221, 221);
+}
+
 .grid-pad {
   margin: 1em 1em;
 }
 
 .drum-pad {
   margin: .25em 0;
-  background-color: rgb(221, 221, 221);
+  background-color: var(--pad-color);
   border-radius: 4px;
   filter: drop-shadow(2px 2px 2px rgb(46, 46, 46));
 
@@ -25,14 +30,21 @@
   transform: translate(-50%, -50%);
   /* bottom: 0;
   right: 0; */
+  font-size: 2em;
 }
 
 .padId {
   text-align: center;
-  margin: 1em 0 0.5em 0;
+  font-size: 1.5em;
+  margin: 0.5em 0;
 }
 
-
+/* Media queries for responsive styling */
+@media (max-width: 767px) {
+  .pad-text {
+    color: var(--pad-color);
+  }
+}
 
 
 
