--- a/src/Display.css
+++ b/src/Display.css
@@ -2,23 +2,21 @@
   /* background-color: rgb(188, 229, 248); */
   background-color: rgb(245, 245, 245);
   border-radius: 8px;
-  margin: 5vh 10vw auto 10vw;
-  padding: 2em;
+  margin: 5vh 15vw auto 15vw;
+  padding: 2.5em;
 }
 
 #display-grid {
    /* css grid */
    display: grid;
-   /* grid-template-columns: repeat(3,1fr); */
    grid-template-columns: 1fr 1fr 1fr;
-   /* grid-auto-rows: minmax(100px, auto); */
 }
 
 /* to maintain pad aspect ratios */
 #display-grid > [style^='--aspect-ratio']::before {
   content: "";
   display: inline-block;
-  width: 1px;
+  /* width: 1px; */
   height: 0;
   padding-bottom: calc(100% / (var(--aspect-ratio)));
 }
